<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.placemark.activities.PlacemarkActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/placemarkTitle"
                android:layout_width="377dp"
                android:layout_height="40dp"
                android:layout_marginTop="72dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/enter_placemark_title"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="376dp"
                android:layout_height="46dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/hint_placemarkDescription"
                app:layout_constraintEnd_toEndOf="@+id/placemarkTitle"
                app:layout_constraintStart_toStartOf="@+id/placemarkTitle"
                app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="374dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:text="@string/button_addPlacemark"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/button_addImage"
                app:layout_constraintStart_toStartOf="@+id/btnAdd"
                app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

            <Button
                android:id="@+id/placemarkLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/button_location"
                app:layout_constraintEnd_toEndOf="@+id/btnAdd"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/chooseImage"
                app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

            <ImageView
                android:id="@+id/placemarkImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/placemarkLocation"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="@+id/chooseImage"
                app:layout_constraintTop_toBottomOf="@+id/placemarkLocation"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/ic_launcher" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>